@@ -112,15 +112,16 @@ the message has been completely transmitted.<p>
 <dt><tt>const response* init(void)</tt></dt> <dd>This hook is called
 once after all the plugins have been loaded.</dd>
 
+<dt><tt>const response* reset(void)</tt></dt> <dd>This hook is called
+when preparing to start a new message, with the intent that all modules
+will flush any data specific to the message, as well as after error
+responses to the sender address or data, and after the SMTP
+<tt>HELO</tt> command.</dd>
+
 <dt><tt>const response* helo(str* hostname)</tt></dt> <dd>This hook is
 called when the SMTP <tt>HELO</tt> or <tt>EHLO</tt> commands are issued.
 As yet nothing actually uses the <tt>hostname</tt> string.  Other
 protocols will not call this hook.</dd>
-
-<dt><tt>const response* reset(void)</tt></dt> <dd>This hook is called
-when preparing to start a new message, with the intent that all modules
-will flush any data specific to the message, as well as after error
-responses to the sender address or data.</dd>
 
 <dt><tt>const response* sender(str* address)</tt></dt> <dd>This hook is
 called after a sender email address is transmitted by the client, and is
